[gd_scene load_steps=11 format=3 uid="uid://bd7ek8pdf7ven"]

[ext_resource type="TileSet" uid="uid://xlq35w1ru86b" path="res://TileMap/new_tile_set.tres" id="1_2g5fg"]
[ext_resource type="Script" path="res://Rooms/room_3.gd" id="1_ybkif"]
[ext_resource type="PackedScene" uid="uid://c6tie7mf8qj34" path="res://Player/player.tscn" id="2_1sh8q"]
[ext_resource type="PackedScene" uid="uid://hfb7b7r05eia" path="res://Mobs/Mob/mob.tscn" id="2_5wx2c"]
[ext_resource type="PackedScene" uid="uid://elayg8svbarm" path="res://UI/ui.tscn" id="3_5i7l1"]
[ext_resource type="PackedScene" uid="uid://djjyi6f8ftjjs" path="res://Mobs/Killer/killer_cell.tscn" id="3_v4dy8"]
[ext_resource type="PackedScene" uid="uid://b0o30tm706lc3" path="res://Rooms/Features/exit_2.tscn" id="4_b1rwn"]
[ext_resource type="PackedScene" uid="uid://6ywdi6nyrmng" path="res://Mobs/B_cell/b_cell.tscn" id="4_rd3ih"]
[ext_resource type="PackedScene" uid="uid://ojrr2k26oixr" path="res://Mobs/White_Cell/white_cell.tscn" id="5_sh5s1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ry770"]
radius = 102.02

[node name="Room3" type="Node2D"]
script = ExtResource("1_ybkif")
mob_scene = ExtResource("2_5wx2c")
killer_scene = ExtResource("3_v4dy8")
bcell_scene = ExtResource("4_rd3ih")
white_scene = ExtResource("5_sh5s1")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_2g5fg")
format = 2
layer_0/tile_data = PackedInt32Array(196611, 458753, 1, 262147, 131073, 1, 327683, 131073, 7, 393219, 131073, 2, 458755, 131073, 2, 196612, 393217, 1, 262148, 65537, 2, 327684, 131073, 2, 393220, 458753, 2, 458756, 131073, 1, 196613, 131073, 1, 262149, 393217, 2, 327685, 458753, 1, 393221, 65537, 6, 458757, 65537, 6, 196614, 65537, 7, 262150, 131073, 7, 327686, 131073, 2, 393222, 393217, 2, 458758, 458753, 1, 196615, 131073, 6, 262151, 131073, 2, 327687, 131073, 7, 393223, 131073, 2, 458759, 393217, 1, 196616, 458753, 2, 262152, 131073, 2, 327688, 65537, 7, 393224, 131073, 6, 458760, 65537, 6, 196617, 458753, 1, 262153, 131073, 6, 327689, 458753, 2, 393225, 458753, 1, 458761, 65537, 2, 196618, 65537, 7, 262154, 131073, 1, 327690, 131073, 2, 393226, 131073, 7, 458762, 458753, 2, 196619, 458753, 1, 262155, 131073, 7, 327691, 65537, 7, 393227, 65537, 2, 458763, 458753, 2, 196620, 131073, 7, 262156, 393217, 1, 327692, 131073, 2, 393228, 131073, 6, 458764, 65537, 2, 196621, 65537, 6, 262157, 65537, 6, 327693, 65537, 7, 393229, 131073, 1, 458765, 131073, 1, 196622, 393217, 1, 262158, 65537, 2, 327694, 393217, 1, 393230, 65537, 7, 458766, 131073, 1, 196623, 65537, 2, 262159, 131073, 1, 327695, 131073, 6, 393231, 131073, 6, 458767, 393217, 1, 196624, 131073, 1, 262160, 131073, 6, 327696, 393217, 1, 393232, 131073, 1, 458768, 65537, 1, 196625, 65537, 1, 262161, 458753, 1, 327697, 131073, 1, 393233, 458753, 2, 458769, 65537, 2, 196626, 65537, 6, 262162, 131073, 2, 327698, 393217, 1, 393234, 131073, 7, 458770, 131073, 7, 196627, 131073, 6, 262163, 131073, 2, 327699, 131073, 7, 393235, 65537, 6, 458771, 458753, 2, 196628, 131073, 6, 262164, 131073, 7, 327700, 458753, 2, 393236, 458753, 1, 458772, 65537, 2, 196629, 131073, 6, 262165, 458753, 1, 327701, 131073, 1, 393237, 393217, 1, 458773, 131073, 1, 196630, 65537, 2, 262166, 65537, 2, 327702, 65537, 7, 393238, 393217, 2, 458774, 131073, 7, 196631, 393217, 1, 262167, 65537, 2, 327703, 65537, 1, 393239, 65537, 6, 458775, 65537, 6, 196632, 131073, 7, 262168, 393217, 2, 327704, 131073, 1, 393240, 65537, 6, 458776, 65537, 7, 720899, 131073, 7, 786435, 131073, 7, 851971, 393217, 2, 917507, 65537, 1, 983043, 131073, 2, 720900, 393217, 2, 786436, 458753, 2, 851972, 65537, 6, 917508, 131073, 1, 983044, 131073, 7, 720901, 131073, 7, 786437, 65537, 6, 851973, 393217, 1, 917509, 131073, 6, 983045, 131073, 2, 720902, 131073, 1, 786438, 131073, 2, 851974, 131073, 7, 917510, 458753, 1, 983046, 131073, 6, 720903, 393217, 2, 786439, 131073, 2, 851975, 458753, 1, 917511, 131073, 1, 983047, 458753, 1, 720904, 131073, 1, 786440, 458753, 1, 851976, 393217, 2, 917512, 65537, 1, 983048, 65537, 2, 720905, 65537, 1, 786441, 65537, 7, 851977, 65537, 7, 917513, 458753, 1, 983049, 393217, 2, 720906, 458753, 2, 786442, 458753, 1, 851978, 131073, 2, 917514, 131073, 1, 983050, 131073, 6, 720907, 131073, 1, 786443, 65537, 7, 851979, 393217, 1, 917515, 65537, 7, 983051, 65537, 2, 720908, 393217, 2, 786444, 458753, 1, 851980, 393217, 2, 917516, 65537, 2, 983052, 131073, 6, 720909, 131073, 1, 786445, 131073, 2, 851981, 65537, 6, 917517, 131073, 6, 983053, 65537, 7, 720910, 65537, 1, 786446, 131073, 7, 851982, 393217, 1, 917518, 131073, 7, 983054, 131073, 1, 720911, 131073, 7, 786447, 131073, 2, 851983, 131073, 7, 917519, 393217, 2, 983055, 458753, 1, 720912, 131073, 1, 786448, 131073, 1, 851984, 458753, 1, 917520, 65537, 2, 983056, 65537, 7, 720913, 65537, 6, 786449, 65537, 6, 851985, 65537, 2, 917521, 131073, 6, 983057, 65537, 7, 720914, 131073, 1, 786450, 131073, 1, 851986, 393217, 1, 917522, 458753, 2, 983058, 131073, 1, 720915, 393217, 1, 786451, 65537, 1, 851987, 131073, 6, 917523, 65537, 1, 983059, 65537, 7, 720916, 65537, 6, 786452, 131073, 7, 851988, 131073, 7, 917524, 131073, 1, 983060, 131073, 1, 720917, 65537, 2, 786453, 393217, 1, 851989, 65537, 2, 917525, 131073, 1, 983061, 131073, 6, 720918, 131073, 1, 786454, 131073, 1, 851990, 65537, 2, 917526, 458753, 2, 983062, 131073, 1, 720919, 131073, 6, 786455, 131073, 1, 851991, 131073, 7, 917527, 393217, 2, 983063, 393217, 2, 720920, 393217, 2, 786456, 131073, 1, 851992, 65537, 2, 917528, 131073, 7, 983064, 131073, 6, 524300, 393217, 1, 589836, 65537, 6, 655372, 131073, 7, 524301, 131073, 6, 589837, 65537, 1, 655373, 65537, 6, 524302, 458753, 1, 589838, 458753, 2, 655374, 131073, 6, 524303, 65537, 1, 589839, 131073, 2, 655375, 393217, 2, 524304, 458753, 2, 589840, 65537, 2, 655376, 131073, 7, 524299, 65537, 1, 589835, 393217, 2, 655371, 131073, 1, -65525, 131073, 7, 11, 393217, 2, 65547, 131073, 2, 131083, 131073, 2, -65524, 65537, 1, 12, 131073, 6, 65548, 393217, 1, 131084, 393217, 1, -65523, 131073, 1, 13, 131073, 1, 65549, 131073, 1, 131085, 131073, 1, -65522, 458753, 1, 14, 131073, 1, 65550, 131073, 6, 131086, 458753, 2, -65521, 65537, 6, 15, 65537, 2, 65551, 131073, 2, 131087, 393217, 2, -65520, 65537, 7, 16, 458753, 1, 65552, 65537, 1, 131088, 131073, 6, -393213, 131073, 2, -327677, 65537, 7, -262141, 458753, 2, -196605, 131073, 1, -131069, 131073, 2, -393212, 393217, 2, -327676, 65537, 7, -262140, 65537, 7, -196604, 65537, 2, -131068, 65537, 2, -393211, 458753, 1, -327675, 131073, 2, -262139, 131073, 6, -196603, 131073, 1, -131067, 131073, 1, -393210, 458753, 1, -327674, 131073, 7, -262138, 458753, 1, -196602, 65537, 1, -131066, 131073, 1, -393209, 131073, 2, -327673, 131073, 1, -262137, 65537, 2, -196601, 458753, 2, -131065, 131073, 7, -393208, 65537, 6, -327672, 131073, 2, -262136, 131073, 7, -196600, 393217, 1, -131064, 65537, 6, -393207, 458753, 2, -327671, 65537, 2, -262135, 131073, 2, -196599, 458753, 2, -131063, 65537, 2, -393206, 131073, 6, -327670, 393217, 2, -262134, 65537, 2, -196598, 458753, 2, -131062, 393217, 1, -393205, 65537, 7, -327669, 131073, 1, -262133, 131073, 6, -196597, 65537, 6, -131061, 65537, 6, -393204, 65537, 6, -327668, 65537, 2, -262132, 131073, 1, -196596, 131073, 7, -131060, 393217, 2, -393203, 65537, 1, -327667, 65537, 6, -262131, 393217, 1, -196595, 131073, 1, -131059, 65537, 6, -393202, 65537, 1, -327666, 131073, 6, -262130, 65537, 1, -196594, 131073, 6, -131058, 458753, 2, -393201, 65537, 1, -327665, 65537, 6, -262129, 393217, 2, -196593, 458753, 2, -131057, 65537, 6, -393200, 65537, 2, -327664, 65537, 7, -262128, 131073, 2, -196592, 65537, 6, -131056, 65537, 6, -393199, 65537, 1, -327663, 458753, 2, -262127, 458753, 2, -196591, 393217, 2, -131055, 393217, 1, -393198, 65537, 7, -327662, 393217, 1, -262126, 65537, 6, -196590, 65537, 6, -131054, 65537, 1, -393197, 131073, 2, -327661, 458753, 2, -262125, 65537, 6, -196589, 65537, 2, -131053, 393217, 1, -393196, 393217, 1, -327660, 65537, 6, -262124, 65537, 1, -196588, 65537, 2, -131052, 65537, 6, -393195, 65537, 7, -327659, 65537, 6, -262123, 131073, 6, -196587, 458753, 2, -131051, 458753, 1, -393194, 65537, 2, -327658, 131073, 1, -262122, 131073, 7, -196586, 65537, 6, -131050, 131073, 2, -393193, 65537, 6, -327657, 131073, 1, -262121, 458753, 2, -196585, 65537, 2, -131049, 131073, 7, -393192, 65537, 7, -327656, 131073, 6, -262120, 65537, 1, -196584, 131073, 6, -131048, 131073, 1, -458749, 458753, 5, -458748, 393217, 5, -458747, 393217, 5, -458746, 458753, 5, -458745, 458753, 5, -458744, 393217, 5, -458743, 393217, 5, -458742, 458753, 5, -458741, 458753, 5, -458740, 393217, 5, -458739, 393217, 5, -458738, 458753, 5, -458737, 393217, 5, -458736, 393217, 5, -458735, 393217, 5, -458734, 393217, 5, -458733, 393217, 5, -458732, 458753, 5, -458731, 393217, 5, -458730, 458753, 5, -458729, 393217, 5, -458728, 458753, 5, 131090, 458753, 5, 131091, 393217, 5, 131092, 458753, 5, 131093, 393217, 5, 131094, 393217, 5, 131095, 458753, 5, 131096, 393217, 5, 131075, 393217, 5, 131076, 458753, 5, 131077, 393217, 5, 131078, 393217, 5, 131079, 393217, 5, 131080, 393217, 5, 131081, 393217, 5, 655363, 458753, 5, 655364, 393217, 5, 655365, 458753, 5, 655366, 393217, 5, 655367, 458753, 5, 655368, 458753, 5, 655369, 458753, 5, 655378, 393217, 5, 655379, 458753, 5, 655380, 393217, 5, 655381, 393217, 5, 655382, 458753, 5, 655383, 458753, 5, 655384, 458753, 5, 1048579, 458753, 8, 1048580, 458753, 8, 1048581, 393217, 8, 1048582, 393217, 8, 1048583, 458753, 8, 1048584, 393217, 8, 1048585, 393217, 8, 1048586, 458753, 8, 1048587, 458753, 8, 1048588, 458753, 8, 1048589, 393217, 8, 1048590, 393217, 8, 1048591, 393217, 8, 1048592, 393217, 8, 1048593, 458753, 8, 1048594, 393217, 8, 1048595, 458753, 8, 1048596, 393217, 8, 1048597, 458753, 8, 1048598, 393217, 8, 1048599, 458753, 8, 1048600, 458753, 8, 524306, 458753, 8, 524307, 393217, 8, 524308, 458753, 8, 524309, 393217, 8, 524310, 458753, 8, 524311, 393217, 8, 524312, 458753, 8, 524291, 393217, 8, 524292, 393217, 8, 524293, 458753, 8, 524294, 393217, 8, 524295, 458753, 8, 524296, 458753, 8, 524297, 393217, 8, -65533, 458753, 8, -65532, 458753, 8, -65531, 458753, 8, -65530, 393217, 8, -65529, 458753, 8, -65528, 393217, 8, -65518, 393217, 8, -65517, 393217, 8, -65516, 393217, 8, -65515, 458753, 8, -65514, 393217, 8, -65513, 458753, 8, -65512, 458753, 8, -393191, 524289, 6, -327655, 524289, 7, -262119, 524289, 6, -196583, 524289, 7, -131047, 524289, 6, 196633, 524289, 6, 262169, 524289, 6, 327705, 524289, 7, 393241, 524289, 7, 458777, 524289, 6, 720921, 524289, 7, 786457, 524289, 6, 851993, 524289, 7, 917529, 524289, 7, 983065, 524289, 6, 720898, 327681, 6, 786434, 327681, 6, 851970, 327681, 7, 917506, 327681, 7, 983042, 327681, 6, 196610, 327681, 6, 262146, 327681, 7, 327682, 327681, 7, 393218, 327681, 7, 458754, 327681, 6, -393214, 327681, 7, -327678, 327681, 7, -262142, 327681, 7, -196606, 327681, 7, -131070, 327681, 6, -458750, 327681, 5, 131074, 327681, 5, 655362, 327681, 5, 655370, 327681, 5, 131082, 327681, 5, 589834, 327681, 6, 10, 327681, 6, 65546, 327681, 6, -65534, 327681, 8, -65511, 524289, 8, 524313, 524289, 8, 1048601, 524289, 8, -458727, 524289, 5, 589841, 524289, 6, 17, 524289, 6, 65553, 524289, 6, 655385, 524289, 5, 131097, 524289, 5, 1048578, 327681, 8, 524290, 327681, 8, -65527, 458753, 8, -65526, 327681, 8, -65519, 524289, 8, 131089, 524289, 5, 655377, 524289, 5, 524298, 327681, 8, 524305, 524289, 8)

[node name="Exit2" parent="." instance=ExtResource("4_b1rwn")]
position = Vector2(2731, -557)

[node name="Player" parent="." instance=ExtResource("2_1sh8q")]
position = Vector2(536, 659)

[node name="Camera2D" type="Camera2D" parent="Player"]
visible = false

[node name="Entrance" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entrance"]
position = Vector2(538, 660)
shape = SubResource("CircleShape2D_ry770")

[node name="Spawn Locations" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="Spawn Locations"]
position = Vector2(2779, 1767)

[node name="Marker2D2" type="Marker2D" parent="Spawn Locations"]
position = Vector2(536, -635)

[node name="Marker2D3" type="Marker2D" parent="Spawn Locations"]
position = Vector2(2610, 1527)

[node name="bcell" type="Marker2D" parent="Spawn Locations"]
position = Vector2(1917, -642)

[node name="killer" type="Marker2D" parent="Spawn Locations"]
position = Vector2(1619, 1699)

[node name="white" type="Marker2D" parent="Spawn Locations"]
position = Vector2(688, 1784)

[node name="Marker2D4" type="Marker2D" parent="Spawn Locations"]
position = Vector2(2799, 799)

[node name="Marker2D5" type="Marker2D" parent="Spawn Locations"]
position = Vector2(2587, 754)

[node name="Marker2D6" type="Marker2D" parent="Spawn Locations"]
position = Vector2(2771, 515)

[node name="killer2" type="Marker2D" parent="Spawn Locations"]
position = Vector2(566, -322)

[node name="UI" parent="." instance=ExtResource("3_5i7l1")]

[node name="Projectiles" type="Node2D" parent="."]

[node name="Items" type="Node2D" parent="."]

[connection signal="body_exited" from="Entrance" to="." method="_on_entrance_body_exited"]
